[package]
name = "raydar"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5.1"
config = "0.14.0"
dotenv = "0.15.0"
futures-util = "0.3.30"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
solana-rpc-client = "1.18.20"
solana-sdk = "1.18.20"
spl-token = "4.0.0"
tokio = { version = "1", features = ["full"] }
tokio-native-tls = "0.3.1"
tokio-tungstenite = { version = "0.23.1", features = ["tokio-native-tls", "native-tls", "url"] }
tungstenite = "0.23.0"
url = "2.5.1"
